# Oasis

./: .gitignore  CMakeLists.txt  README.md
resources/: style.qss
src/: main.cpp
src/core/: plant_system.cpp  plant_system.hpp  reminder_engine.cpp  reminder_engine.hpp  settings_manager.cpp  settings_manager.hpp  warming_copy.hpp
src/ui/: popup_widget.cpp  popup_widget.hpp  settings_widget.cpp  settings_widget.hpp  stats_widget.cpp  stats_widget.hpp
src/ui/components/: circular_progress.cpp  circular_progress.hpp
